0022989: BSplCLib::Reparametrize() fails on near knots